@@ -103,6 +103,7 @@
     * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
     * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
     * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...
+    * 1401 FIX: Display options in views are now again persistent...
 
     WATO:
     * 1096 New WATO webservices: manage hosts via webinterface...
